# Contains internal libraries
add_subdirectory(Libraries)

# Base GameEngine library
add_subdirectory(GameEngine)

# Platform specific GameEngine code
add_subdirectory(GameEngineDevice)

# Contains the main game exe target.
add_subdirectory(Main)

if (ZEROHOUR_TOOLS) # TODO, does nothing yet.
    add_subdirectory(Tools)
endif()